支持 GBK 编码文件并补充 client 模式说明
- readSqlFile/readScriptFile 改为先 UTF-8 严格解码、失败回退 GBK，
  本地与 HDFS 分支行为一致，修复 GBK 脚本/SQL 触发的 MalformedInputException
- README 示例改为 SQL/Scala × cluster/client 四种组合；
  新增 Client 模式运行说明（driver-class-path 用法，可写进 spark-defaults.conf，cluster 模式不受影响）